[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
backend-path = "."

[project]
name = "mcp-server-creator"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A powerful Model Context Protocol (MCP) server that creates other MCP servers!"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["mcp", "server", "metaprogramming", "code-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License", # Assuming MIT, will confirm in a later step
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/mcp-server-creator"  # Placeholder
"Bug Tracker" = "https://github.com/yourusername/mcp-server-creator/issues" # Placeholder

[tool.setuptools.packages.find]
where = ["."] 
include = ["mcp_server_creator_package*"]
